[metadata]
name = beam_volume_tools
author = radio-astro-tools developers
author_email = 
license = BSD 3-Clause
license_file = licenses/LICENSE.rst
url = http://beam-volume-tools.readthedocs.io
description = Tools for calculating and comparing beam volumes
long_description = file: README.rst
long_description_content_type = text/x-rst
edit_on_github = True
github_project = radio-astro-tools/beam-volume-tools

[options]
zip_safe = False
packages = find:
python_requires = >=3.7
setup_requires = setuptools_scm
install_requires =
    astropy
    spectral-cube
    radio-beam


[options.extras_require]
test =
    pytest-astropy
docs =
    sphinx-astropy

[options.package_data]
beam_volume_tools = data/*

[tool:pytest]
testpaths = "beam_volume_tools" "docs"
astropy_header = true
doctest_plus = enabled
text_file_format = rst
addopts = --doctest-rst

[coverage:run]
omit =
    beam_volume_tools/_astropy_init*
    beam_volume_tools/conftest.py
    beam_volume_tools/*setup_package*
    beam_volume_tools/tests/*
    beam_volume_tools/*/tests/*
    beam_volume_tools/extern/*
    beam_volume_tools/version*
    */beam_volume_tools/_astropy_init*
    */beam_volume_tools/conftest.py
    */beam_volume_tools/*setup_package*
    */beam_volume_tools/tests/*
    */beam_volume_tools/*/tests/*
    */beam_volume_tools/extern/*
    */beam_volume_tools/version*

[coverage:report]
exclude_lines =
    # Have to re-enable the standard pragma
    pragma: no cover
    # Don't complain about packages we have installed
    except ImportError
    # Don't complain if tests don't hit assertions
    raise AssertionError
    raise NotImplementedError
    # Don't complain about script hooks
    def main\(.*\):
    # Ignore branches that don't pertain to this version of Python
    pragma: py{ignore_python_version}
    # Don't complain about IPython completion helper
    def _ipython_key_completions_
